--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Listing Courses</h1>
 
+<%= text_field_tag :query, nil, id: 'course-autocomplete', placeholder: 'Search query...' %>
+
 <table>
   <thead>
     <tr>
