Now contains structure for header, navbar, and footer.  Bulk of code moved to corresponding sub layouts.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>TheJollyAdvisor</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+<html lang=en>
+	<head>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+		<meta charset="utf-8">
+		<title><%= full_title(yeild(:title)) %> | The Jolly Advisor</title>
+		<meta name="generator" content="Bootply" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	  
+		<%= stylesheet_link_tag    'bootstrap', media: 'all', 'data-turbolinks-track' => true %>
+		<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+		<%= csrf_meta_tags %>
+		<%= render 'layouts/shiv' %>
+	</head>
+	
+	<body>
+		<!-- navbar -->
+    <%= render 'layout/navbar' %>
+    <!-- /navbar -->
+    
+    <%= render 'layouts/header' %>
+		
+    <div class="container">
+      <%= yield %>
+    </div>
+    
+    <%= render 'layouts/footer' %>
+	</body>
+	
 </html>
