--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,22 +3,19 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
-		<title><%= full_title(yeild(:title)) %> | The Jolly Advisor</title>
+		<title><%= full_title(yield(:title)) %> | The Jolly Advisor</title>
 		<meta name="generator" content="Bootply" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	  
-		<%= stylesheet_link_tag    'bootstrap', media: 'all', 'data-turbolinks-track' => true %>
+		<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 		<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 		<%= csrf_meta_tags %>
-		<%= render 'layouts/shiv' %>
 	</head>
 	
 	<body>
 		<!-- navbar -->
-    <%= render 'layout/navbar' %>
+    <%= render 'layouts/navbar' %>
     <!-- /navbar -->
-    
-    <%= render 'layouts/header' %>
 		
     <div class="container">
       <%= yield %>
