--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,17 +1,5 @@
 <div class="no-gutter row">
-  <!-- left side column -->
-  <div class="col-md-2">
-    <div class="panel panel-default" id="sidebar">
-    <div class="panel-heading" style="background-color:#888;color:#fff;">Explorer Links</div> 
-    <div class="panel-body">
-    <ul class="nav nav-stacked">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">New Search</a></li>
-    </ul>
-    
-    </div><!--/panel body-->
-    </div><!--/panel-->
-  </div><!--/end left column-->
+  <%= render 'sidebar' %>
     
   <!--mid column-->
   <div class="col-md-3">
@@ -20,8 +8,7 @@
     <div class="panel-heading" style="background-color:#555;color:#eee;"></div> 
     <div class="panel-body">
       <div class="well">
-          <img src="assets/koyuturk.jpg" class="img-responsive">
-          <h3><a href="http://www.ratemyprofessors.com/ShowRatings.jsp?tid=1104419"><%=first_professor.name%></a></h3>
+          <h3><%=first_professor.name%></h3>
       </div>
       
       <hr>
@@ -52,7 +39,7 @@
           <table border="0" id="ACE_SSR_CLS_DTL_WRK_GROUP6" cellpadding="0" cellspacing="0" cols="2" width="541">
             <tbody>
               <tr>
-                <td valign="top" align="left"><div id="win0divDERIVED_CLSRCH_DESCRLONG">
+                <td valign="top" align="left">
                   <h4>Description:</span></h4>
                   <p><%= @course.description %></p>
                   <p>&nbsp;</p>
@@ -64,40 +51,24 @@
                     <% end %>
                   </ul>
                   </p>
-                  <h4>Suggested Prereqs:</h4>
-                  <p>TODO</p>
                   <h4>Required for:</h4>
                   <p>TODO</p>
-                </div></td>
-                </tr>
-              </tbody>
-            </table>
-          <br><br>
-          </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
+      </div>
       
         <hr>
                   
         <h2>Tips and Reviews</h2>
+        <p>TODO: Populate this via the Posts model</p>
         
-        <p>Hello aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia cor magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut. Rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia cor magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut!</p>
         <hr>
       
         </div><!--/panel-body-->
       </div><!--/panel-->
     <!--/end right column-->
-    <!-- script references -->
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/scripts.js"></script>
   </div> 
 </div>
-
-<!--
-**Previous semesters?**
-<% @instances_by_semester.each do |semester, instances| %>
-  <p><b><%= semester %></b>:</p>
-  <% instances.each do |instance| %>
-    Section <%= instance.section %> taught by <%= instance.professor.name %><br />
-  <% end %>
-<% end %> -->
