layout, prereqs, nav bar auotcompletion
Fix layout issues with some poor indentation in nav bar

Move course autocomplete into nav bar in preparation for turning course
search page into a more powerful search.

Clean up prereq code and add in code for postrequisites

--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -33,12 +33,13 @@
                     %p= @course.description
                     %p  
                     %h4 Prereqs:
-                    %p
                     %ul
                       - prereq_sets(@course).each do |prereq_set|
-                        = prereq_set.html_safe
+                        %li= prereq_set
                     %h4 Required for:
-                    %p TODO
+                    %ul
+                      - postreqs(@course).each do |postreq|
+                        %li= postreq
         %hr
         #posts
           %h2 Tips and Reviews
