--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -18,6 +18,9 @@
             %br
             = instance.meetings.first.schedule
             %br
+        - if user_signed_in?
+          %hr/
+          =render partial: 'wishlist/add_remove_link', locals: { course: @course }
   #content.col-md-7
     .panel
       .panel-heading{style: "background-color:#111;color:#fff;"}
