can now set a notify flag on wishlist items

--- a/app/views/wishlist/index.html.haml
+++ b/app/views/wishlist/index.html.haml
@@ -4,9 +4,11 @@
 %table
   %thead
     %th Course
-    %th Action
+    %th Actions
   %tbody
     - @wishlist.each do |item|
       %tr
-        %td= link_to item, item 
-        %td= render partial: 'wishlist/add_remove_link', locals: { course: item }
+        %td= link_to item.course, item.course
+        %td
+          = render partial: 'wishlist/add_remove_link', locals: { course: item.course }
+          = render partial: 'wishlist/set_notify_link', locals: { item: item }
