--- a/app/views/wishlist/_set_notify_link.html.haml
+++ b/app/views/wishlist/_set_notify_link.html.haml
@@ -1,1 +1,1 @@
-= link_to "Turn #{item.notify ? 'off' : 'on'} notifications", wishlist_path(course_id: item.course_id, wishlist_item: { notify: !item.notify }), method: :put
+= set_notify_link item
