--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -20,7 +20,7 @@
             %br
         - if user_signed_in?
           %hr/
-          =render partial: 'wishlist/add_remove_link', locals: { course: @course }
+          = add_remove_link current_user.wishlist.map(&:course_id), @course
   #content.col-md-7
     .panel
       .panel-heading{style: "background-color:#111;color:#fff;"}
