update the autocomplete source on calendar reload. also use some helpers

--- a/app/views/scheduler/index.js.erb
+++ b/app/views/scheduler/index.js.erb
@@ -8,3 +8,7 @@ $('#calendar').fullCalendar('addEventSource', new_feed);
 
 // update the form with the new feed
 $('#old_feed').val(new_feed);
+
+// additionally, need to change the autocomplete source so that it
+// looks for course instances in the correct day range
+$('#course_title').autocomplete('option', 'source', '<%= course_instance_autocomplete(@jump_date || Date.today).html_safe %>');
