--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -21,7 +21,7 @@
             %i.glyphicon.glyphicon-chevron-down
           %ul.dropdown-menu{role: "menu"}
             - unless user_signed_in?
-              %li= link_to "Login", login_users_path
+              %li= link_to "Login", login_users_path(was_at: request.env['PATH_INFO'])
             - else
               %li= link_to "#{current_user.case_id}: Logout", logout_users_path
             %li.divider
