--- a/app/views/scheduler/index.html.haml
+++ b/app/views/scheduler/index.html.haml
@@ -13,7 +13,7 @@
 #calendar
 
 :javascript
-  // pass any query parameters along to the JSON action
+  // pass any query parameters along to the action
   var event_feed = '#{scheduler_feed}';
   $('#old_feed').val(event_feed);
   $('#calendar').fullCalendar({
