--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -13,10 +13,10 @@
           %p
             %b= semester
             \:
-          - instances.each do |instance|
+          - instances.sort_by { |instance| instance.section }.each do |instance|
             Section #{instance.section} taught by #{instance.professor.name}
             %br
-            = instance.meetings.first.schedule
+            = instance.meetings.try(:first).try(:schedule) || 'TBA'
             %br
         - if user_signed_in?
           %hr/
