--- a/app/assets/stylesheets/courses.css.less
+++ b/app/assets/stylesheets/courses.css.less
@@ -1,3 +1,9 @@
 // Place all the styles related to the courses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+#explorer_main{
+  box-shadow: 0 3px 3px #888;
+  margin-bottom: 20px;
+}
