Listed courses more readable (increased spacing). Made input boxes prettier (increased margins around input boxes).

--- a/app/assets/stylesheets/courses.css.less
+++ b/app/assets/stylesheets/courses.css.less
@@ -6,3 +6,26 @@
   box-shadow: 0 3px 3px #888;
   margin-bottom: 20px;
 }
+
+td {
+
+  padding: 10px;
+}
+
+th {
+  padding: 10px;
+}
+
+.crs_search{
+  margin-left: 25px;
+  padding: 5px;
+  height: 25px;
+}
+
+.smstr{
+  margin-left: 6px;
+}
+
+.prfssr{
+  margin-left: 5px;
+}
