--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -10,12 +10,13 @@
         %h1 Listing Courses
         = form_tag courses_path, method: :get do
           = label_tag(:search)
-          = text_field_tag :search, params[:search], placeholder: 'Course search'
+          = text_field_tag :search, params[:search], placeholder: 'Course search', class: 'crs_search'
           %br
           = label_tag(:semester)
-          = select_tag :semester, options_from_collection_for_select(@semesters, :id, :to_s, params[:semester].to_i), include_blank: "All"
+          = select_tag :semester, options_from_collection_for_select(@semesters, :id, :to_s, params[:semester].to_i), include_blank: "All", class: 'smstr'
+          %br
           = label_tag(:professor)
-          = text_field_tag :professor, params[:professor]
+          = text_field_tag :professor, params[:professor], class: 'prfssr'
           = submit_tag "Search", name: nil
         %table
           %thead
