Moved heading to panel header, rearranged search parameters, made things prettier all over.

--- a/app/assets/stylesheets/courses.css.less
+++ b/app/assets/stylesheets/courses.css.less
@@ -7,6 +7,18 @@
   margin-bottom: 20px;
 }
 
+.panel-heading{
+  text-align: center;
+  padding-bottom: 5px;
+}
+
+.crs_count{
+  margin-left: 50px;
+  text-align: center;
+  font-size: 75%;
+  color: #666666;
+}
+
 td {
 
   padding: 10px;
@@ -14,10 +26,15 @@ td {
 
 th {
   padding: 10px;
+  font-size: 150%;
 }
 
+// Margin right was added because I couldn't figure out how to add class/id to the professor label
+// So to get the spacing the course search box pushes everything right.
 .crs_search{
   margin-left: 25px;
+  margin-right: 15px;
+  margin-bottom: 15px;
   padding: 5px;
   height: 25px;
 }
@@ -26,8 +43,9 @@ th {
   margin-left: 6px;
 }
 
-.prfssr{
+.prfssr_input{
   margin-left: 5px;
+  margin-right: 15px;
 }
 
 p {
