--- a/app/assets/stylesheets/scheduler.css.less
+++ b/app/assets/stylesheets/scheduler.css.less
@@ -1,3 +1,19 @@
 // Place all the styles related to the scheduler controller here.
 // They will automatically be included in application.css.
 // You can use Less here: http://lesscss.org/
+
+
+.sem_form.term_dropdown{
+  margin-right: 20px;
+  padding-right: 20px;
+}
+
+
+#sem_form .year_dropdown{
+  margin-right: 10px;
+}
+
+#sem_form .form_control {
+  width: 50px;
+  margin-top: 10px;
+}
