Changed the spacing between the form inputs.

--- a/app/assets/stylesheets/scheduler.css.less
+++ b/app/assets/stylesheets/scheduler.css.less
@@ -3,17 +3,20 @@
 // You can use Less here: http://lesscss.org/
 
 
-.sem_form.term_dropdown{
+#semester_semester{
   margin-right: 20px;
-  padding-right: 20px;
 }
 
 
-#sem_form .year_dropdown{
-  margin-right: 10px;
+#semester_year{
+  margin-right: 20px;
 }
 
-#sem_form .form_control {
-  width: 50px;
+#semester_half{
+  margin-right: 20px;
+}
+
+#schedule_form {
+  width: 250px;
   margin-top: 10px;
 }
