Changed Prereqs to Prerequisites, looks more professonal

--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -34,7 +34,7 @@
                     %h4 Description:
                     %p= @course.description
                     %p  
-                    %h4 Prereqs:
+                    %h4 Prerequisites:
                     %ul
                       - prereq_sets(@course).each do |prereq_set|
                         %li= prereq_set
