--- a/app/assets/stylesheets/wishlist.css.less
+++ b/app/assets/stylesheets/wishlist.css.less
@@ -1,3 +1,8 @@
 // Place all the styles related to the wishlist controller here.
 // They will automatically be included in application.css.
 // You can use Less here: http://lesscss.org/
+
+
+#wishlist_course_form{
+  width: 250px;
+}
