--- a/app/views/wishlist/index.html.haml
+++ b/app/views/wishlist/index.html.haml
@@ -1,19 +1,29 @@
-%h1 Wishlist
-= form_tag wishlist_path, role: :search, id: :wishlist_course_form do
-  = hidden_field_tag :course_id
-  = text_field_tag :course_title, nil, placeholder: "Add course to wishlist", class: 'form-control'
 
-/ someone else should make this look pretty
-%table
-  %thead
-    %th Course
-    %th Schedulable
-    %th Actions
-  %tbody
-    - @wishlist.each do |item|
-      %tr
-        %td= link_to item.course, item.course
-        %td= item.course.schedulable? ? "Yes" : "No"
-        %td
-          = add_remove_link @wishlist.map(&:course_id), item.course
-          = set_notify_link item
+.no-gutter.row
+  .col-md-10.col-md-offset-1
+    #wishlist_main.panel
+      .panel-heading{style: "background-color:#111;color:#fff;"}
+        %h1 Wishlist
+
+      .panel-body
+
+        = form_tag wishlist_path, role: :search, id: :wishlist_course_form do
+          = hidden_field_tag :course_id
+          = text_field_tag :course_title, nil, placeholder: "Add course to wishlist", class: 'form-control'
+
+        %hr
+
+        %table
+          %thead
+            %th Course
+            %th Schedulable
+            %th Actions
+          %tbody
+            - @wishlist.each do |item|
+              %tr
+                %td= link_to item.course, item.course
+                %td= item.course.schedulable? ? "Yes" : "No"
+                %td
+                  = add_remove_link @wishlist.map(&:course_id), item.course
+                %td
+                  = set_notify_link item
