--- a/app/views/wishlist/index.html.haml
+++ b/app/views/wishlist/index.html.haml
@@ -10,6 +10,7 @@
         = form_tag wishlist_path, role: :search, id: :wishlist_course_form do
           = hidden_field_tag :course_id
           = text_field_tag :course_title, nil, placeholder: "Add course to wishlist", class: 'form-control'
+          = submit_tag 'Submit', hidden: true, id: :submit
 
         %hr
 
