remove hard-coded link to faq

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -9,7 +9,7 @@
         %li= link_to "Explorer", courses_path
         %li= link_to "Scheduler", scheduler_path
         %li= link_to "Wish List", wishlist_path
-        %li= link_to "FAQ", "faq.html.haml"
+        %li= link_to "FAQ", faq_path
       %ul.nav.navbar-right.navbar-nav
         %li
           %form.navbar-form{role: 'search'}
