add faqs about scheduler?

--- a/app/views/faq/index.html.haml
+++ b/app/views/faq/index.html.haml
@@ -31,3 +31,21 @@
         =link_to 'wishlist page,', wishlist_path
         there are links to remove classes from your wishlist.
         Alternatively, you can remove a class from it's own page, similarly to how you can add one.
+    %tr
+      %td What's the scheduler?
+      %td Scheduler is a way for you to plan out your semesters. You can add courses for a given semester, and they will be displayed in a nice calendar view.
+    %tr
+      %td How do I add courses to my planned schedule?
+      %td
+        The exact same way you add classes to a wishlist! Go to the
+        =link_to 'scheduler page', scheduler_path
+        and start typing in the textbox. Then select from the drop down.
+    %tr
+      %td How do I remove classes from my planned schedule?
+      %td ... coming soon!
+    %tr
+      %td How do I add classes to a planned schedule for another semester?
+      %td Choose the semester (fall/spring/summer and year) you want and hit "Change Semester". The calendar will reload to the correct semester, and you will be able to add classes to it.
+    %tr
+      %td What is first half and second half in Scheduler?
+      %td That is to distinguish between the first and second halves of semesters. This is really only useful if you're looking for gym classes. Otherwise, you don't really need to worry about it.
