add faqs about signing in.

--- a/app/views/faq/index.html.haml
+++ b/app/views/faq/index.html.haml
@@ -14,6 +14,15 @@
         You can either search from the top right search box, or from the
         =link_to 'explorer page.', root_path
     %tr
+      %td How can I sign in?
+      %td Authentication is done via Case's Single Sign On. You will be redirected there if you ever need to login to access something.
+    %tr
+      %td What things do I need to be logged in to access?
+      %td Currently, just Wishlist and Scheduler. These are the only things that are personal to you.
+    %tr
+      %td Is signing in safe?
+      %td Absolutely. Authentication is managed via Single Sign On. We never even see your password; SSO just tells us that you're legit.
+    %tr
       %td What's a wishlist?
       %td A wishlist is a list of classes you're interested in taking at some point. You can sign up to get notifications when a class on your wishlist becomes schedulable?
     %tr
