Removed Tips and Reviews section.

--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -43,7 +43,7 @@
                       - postreqs(@course).each do |postreq|
                         %li= postreq
         %hr
-        #posts
-          %h2 Tips and Reviews
-          %p TODO: Populate this via the Posts model
-        %hr
+        -##posts
+        -#  %h2 Tips and Reviews
+        -#  %p TODO: Populate this via the Posts model
+        -#%hr
